2009-10-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Coverage and fixes for Condition.pm.
	* lib/Automake/Condition.pm (new): Catch common programming
	errors better by checking type of passed argument before
	munging them to all be strings through split.
	* lib/Automake/tests/Condition.pl (test_basics): Also test
	->human.
	(test_merge): New function, test ->merge, ->merge_conds,
	->strip.
	* lib/Automake/tests/Condition-t.pl (test_basics, test_merge):
	Likewise changes, but including state copies across thread
	creation.
	* lib/Automake/tests/Cond2.pl: New test for programming error.
	* lib/Automake/tests/Cond3.pl: Likewise.
	* lib/Automake/tests/Makefile.am (TESTS, XFAIL_TESTS): Update.

	Coverage for Wrap.pm.
	* lib/Automake/tests/Wrap.pl (@tests): Add test for word with
	trailing space.
	(test_makefile_wrap, @makefile_tests): New function, new list of
	tests, to test makefile_wrap.

	Coverage for Version.pm.
	* lib/Automake/tests/Version.pl (test_version_compare): Also
	try Automake::Version::check for the version pairs, taking into
	account the special-case naming of code forks.
	(@tests): Add more test cases.
	(test_bad_versions, @bad_versions): New function, new test cases,
	to ensure bad version strings are rejected.
	* lib/Automake/tests/Version2.pl: New test.
	* lib/Automake/tests/Version3.pl: Likewise.
	* lib/Automake/tests/Makefile.am (TESTS): Add tests here ...
	(XFAIL_TESTS): ... and here, new.

	Pod coverage for Perl modules.
	* lib/Automake/ChannelDefs.pm (parse_warnings): Fix
	typo in Pod documentation.
	* lib/Automake/Condition.pm: Add a couple of missing `=back'
	lines.
	(_has): Renamed from ...
	(has): ... this, as this is an internal method.
	(strip, false, true_when): Adjust callers.
	* lib/Automake/Configure_ac.pm: Add Pod `Functions' section with
	documentation for find_configure_ac and require_configure_ac.
	* lib/Automake/Location.pm: Fix typo in Pod.  Add `Methods'
	section, document methods.