@@ -26,6 +26,8 @@ Cond2.pl \
 Cond3.pl \
 DisjConditions.pl \
 DisjConditions-t.pl \
+DisjCon2.pl \
+DisjCon3.pl \
 Version.pl \
 Version2.pl \
 Version3.pl \
@@ -34,6 +36,8 @@ Wrap.pl
 XFAIL_TESTS = \
 Cond2.pl \
 Cond3.pl \
+DisjCon2.pl \
+DisjCon3.pl \
 Version2.pl \
 Version3.pl
 
