@@ -1,5 +1,14 @@
 2009-10-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Coverage for DisjConditions.pm.
+	* lib/Automake/tests/DisjConditions.pl (test_basics): Increase
+	test coverage: test ->human, ->merge, ->simplify, ->multiply.
+	* lib/Automake/tests/DisjConditions-t.pl (test_basics): Likewise
+	changes, but including state copies across thread creation.
+	* lib/Automake/tests/DisjCon2.pl: New test.
+	* lib/Automake/tests/DisjCon3.pl: Likewise.
+	* lib/Automake/tests/Makefile.am (TESTS, XFAIL_TESTS): Adjust.
+
 	Coverage and fixes for Condition.pm.
 	* lib/Automake/Condition.pm (new): Catch common programming
 	errors better by checking type of passed argument before
